<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">IPTV Billing</string>
    <string name="credential_detail">Enter your Login Details</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="submit">Login</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">This module is under development</string>
    <string name="drawer_open">menu_toggle</string>
    <string name="closeDrawer">close</string>
    <string name="lost_password_reset">Lost Password Reset</string>
    <string name="lost_password_brief">Forgotten your password? Enter your email address below to begin the reset process</string>
    <string name="reset_email_address">Enter your Email Address</string>
    <string name="wrong_email_message">No client account was found with the email address you entered</string>
    <string name="success_email_message">Validation Email Sent</string>
    <string name="rset_password_process_brief">The Password reset process has been started. Please check your email for a Passcode and enter it as below.</string>
    <string name="reset_passode"></string>
    <string name="new_password_brief">Please enter your desired new password below:</string>
    <string name="reset_new_password">New Password</string>
    <string name="reset_confirm_new_password">New Confirm Password</string>
    <string name="tip_for_password">Tips for good password </string>
    <string name="voip_disccount_message">Get Your VoIP Account on <b>20%</b> disscount !</string>
    <string name="client_name">Amanpreet Singh</string>
    <string name="client_email">aman@newsparktechnology.com</string>
    <string name="logout">LOGOUT</string>
    <string name="tip1">Tips for good password </string>
    <string name="tip2">Use both upper and lowercase characters. Include
    at least one symbol (# $ !  etc) </string>
    <string name="tip3">Dont use dictionary words</string>
    <string name="my_support_tickets">MY SUPPORT TICKETS</string>
    <string name="view_request">VIEW REQUEST</string>
    <string name="srch">Search My Support Ticket</string>
    <string name="search_reply">Search Ticket Reply</string>
    <string name="my_services">MY SERVICES</string>
    <string name="manage_products">MANAGE PRODUCTS</string>
    <string name="manage_product_alert_message">There is an outstanding cancellation request for this services/product</string>
    <string name="my_invoices">MY INVOICES</string>
    <string name="my_domains">MY DOMAINS</string>
    <string name="manage_domains">MANAGE DOMAINS</string>
    <string name="open_ticket">OPEN TICKET</string>
    <string name="open_ticket_brief">If you can\'t find a solution to your problems in our knowledgebase, you can submit a ticket by selecting the appropriate department below.</string>
    <string name="invoices_detail_heading">INVOICE</string>
    <string name="manage_servers">CHANGE NAMESERVERS</string>
    <string name="my_contacts">MY CONTACTS</string>
    <string name="voip_detail">VoIP Detail</string>
    <string name="product_detatil">PRODUCT DETAIL</string>
    <string name="voip_detatil">VoIP DETAILS</string>
    <string name="add_funds">ADD FUNDS</string>
    <string name="mandate_info">*All deposit funds are non refundable.</string>
    <string name="group_products">PRODUCTS</string>
    <string name="product_groups">GROUPS</string>
    <string name="view_cart">SELECTED CART ITEMS</string>
    <string name="client_remaining_credit">Remaining Credits</string>
    <string name="my_credits">MY CREDITS</string>
    <string name="search">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="live_tv">LIVE TV</string>
    <string name="favourite">FAVOURITE</string>
    <string name="vod">VIDEO ON DEMAND</string>
    <string name="activation_code">Activation Code</string>
    <string name="or">Or</string>
    <string name="channel_name">Channel Name</string>
    <string name="active_channel">Loading...</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="remove_from_favourite">Remove From Favourite</string>
    <string name="client_username">Username</string>
    <string name="no_stream_found">No Channel Found</string>
    <string name="no_record_found">No Record Found</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="loading">Loading..</string>
    <string name="director">Director</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating:</string>
    <string name="off">[off]</string>
    <string name="no_video_found">No Record Found</string>
    <string name="no_subscription">If your service is disabled or expired due to non-payment, login here to your billing area and pay the bill to re-activate it again.</string>
    <string name="no_subscription_">No Subscription</string>
    <string name="priority">Priority</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">WHMCS</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="account_info">ACCOUNT INFO</string>
    <string name="support">SUPPORT</string>
    <string name="support_label">Support:</string>
    <string name="sales_label">Sales:</string>
    <string name="whatsapp_label">WhatsApp:</string>
    <string name="support_email">support@whmcssmarters.com</string>
    <string name="sales_email">sales@whmcssmarters.com</string>
    <string name="whatsapp_number">+91 7589112968</string>
    <string name="account_username">Username:</string>
    <string name="account_status">Account Status:</string>
    <string name="account_expiry_date">Expiry Date:</string>
    <string name="account_is_trial">Is Trial:</string>
    <string name="account_active_connections">Active Connections:</string>
    <string name="account_created_at">Created At:</string>
    <string name="account_max_connections">Max Connections:</string>
    <string name="whmcs_billing">Login to Billing</string>
    <string name="whmcs_iptv">Login to IPTV</string>
    <string name="my_billing_services"><![CDATA[My Billing & Services]]></string>
    <string name="settings">SETTINGS</string>
    <string name="select_your_media_player">Select Your Media Player</string>
    <string name="exo_player">Built-in Player  ( Default )</string>
    <string name="mx_player">MX Player</string>
    <string name="vlc_player">VLC Player</string>
    <string name="save_changes">Save Changes</string>
    <string name="no_subscription_messag1"> You don\'t have any active service with us</string>
    <string name="no_subscription_messag2"> Your service might have suspended or disabled due to non-payment</string>
    <string name="no_subscription_messag3"> Your service might have expired due to non-payment </string>
    <string name="no_subscription_messag4">Please pay your invoice  - Menu -> Billing -> My Invoice</string>
    <string name="tv_pay_your_invoice">Billing -> My Invoice >></string>
    <string name="tv_reasons">You\'re redirected to this page because of the reason below:</string>
    <string name="no_service_purchased">NO SERVICE PURCHASED</string>
    <string name="click_to_purchase">Click Here to Purchase Your Product</string>
    <string name="authorization">AUTHORIZATION</string>
    <string name="authroiztion_messag1">Authorization does not matches. Please contact to Administrator</string>
    <string name="order_new_services">SHOPPING CART</string>
    <string name="invoice_detail">INVOICE DETAIL</string>
    <string name="no_subscription_error_code">Error code 214 occurs. Please contact to your  administrator.</string>
    <string name="error_code_210_message">Error code 210 occurs. Please contact to your adminisrator</string>
    <string name="error_code_211_message">Error code 211 occur. Please contact to your administrator.</string>
    <string-array name="lang_select">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="English" translatable="false">Value</string>
    <string name="player_setting">Player Selection</string>
    <string name="parental_contol">Parental Control</string>
    <string name="add_category_to_lock">Add Category to lock</string>
    <string name="parental_settings">PARENTAL SETTING</string>
    <string name="lock_category">Security</string>
    <string name="lock">Create Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bt_submit">SAVE</string>
    <string name="bt_save">SUBMIT</string>
    <string name="please_input_password">Please enter your password</string>
    <string name="reoad_data_cat_epg">Reload Live, Movie and EPG</string>
    <string name="importing_epg">Loading TV Guide</string>
    <string name="tv_guide">LIVE TV WITH GUIDE</string>
    <string name="unlocked">Unlocked :</string>
    <string name="locked">Locked :</string>
    <string name="epg_imported">TV Guide Loaded Successfully!</string>
    <string name="setting_epg_channels_first">Please wait, while we are getting things ready for the first time</string>
    <string name="skip_import_epg">SKIP</string>
    <string name="importing_livestreams_cat">Loading Channel Categories</string>
    <string name="importing_vod_cat">Loading VOD Categories</string>
    <string name="importign_all_channels">Loading Channels and VOD</string>
    <string name="refreshing_livestreams_cat">Refreshing Channel Categories</string>
    <string name="refreshing_vod_cat">Refreshing VOD Categories</string>
    <string name="load_channels_vod">Refresh Channels and VOD</string>
    <string name="load_tv_guide">Refresh TV Guide</string>
    <string name="view_grid">Grid View</string>
    <string name="view_Linear">List View</string>
    <string name="nav_play">Play</string>
    <string name="menu_view_details">Movie Info</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign up for an account</string>
</resources>